--- a/src/modules/modal/components/common/common.styles.less
+++ b/src/modules/modal/components/common/common.styles.less
@@ -4,6 +4,7 @@
   background-color: @color-modal-veil;
   height: 100vh;
   position: fixed;
+  top: 0;
   width: 100vw;
   z-index: @mask-modal;
 }
